--- a/scratch/Makefile
+++ b/scratch/Makefile
@@ -29,9 +29,9 @@ gemet.obo: priority-gemet.tsv
 gemet-labels.tsv: priority-gemet.tsv
 	cut -f2 $<  > $@
 
-#GEMETX = chebi
-GEMETX = mondo oba mesh sctid chebi eo envo to pato exo
+GEMETX = ncbitaxon mondo oba mesh sctid chebi eo envo to po pato exo taxrank
 XOBOS = $(patsubst %, xrefs-gemet-%.obo,$(GEMETX))
+IOBOS = $(patsubst %, -r %,$(GEMETX))
 LABELS = $(patsubst %, labels-%.tsv,$(GEMETX))
 
 gemet: $(XOBOS) 
@@ -56,9 +56,20 @@ gemet-bestmatches.tsv: allx.obo
 summary-xrefs-%.txt:
 	grep -c ^id: xrefs-$*-*.obo
 
-no-align.tsv: allx.obo gemet.obo
-	blip-findall -i $< -i gemet.obo "class(X),id_idspace(X,'GEMET'),\+entity_xref(X,_)" -select X -label -use_tabs | sort -u > $@
+no-align.tsv: allx.obo gemet.obo 
+	blip-findall -i $< -i gemet.obo -i gemet-full.obo -consult sdgutil no_align/2 -no_pred -label -use_tabs | sort -u > $@
 
 labels: $(LABELS)
 labels-%.tsv:
 	blip-findall -r $* -consult synreport.pro rpt/3 -grid -use_tabs -no_pred > $@
+
+
+envo-rpt.tsv: no-align.tsv
+	egrep '(ANTHROPOSPHERE|ATMOSPHERE|BIOSPHERE|ENVIRONMENT_natural|HYDROSPHERE|LITHOSPHER|WASTES)' $< > $@
+
+# OBOL
+compositional.obo:
+	obol -debug qobol qobol -i related_to.obo -i gemet.obo $(IOBOS) -idspace GEMET -tag gemet -undefined_only true -export obo > $@
+
+compositional-rest.obo:
+	obo-subtract.pl compositional.obo allx.obo > $@
