--- a/scratch/Makefile
+++ b/scratch/Makefile
@@ -85,6 +85,8 @@ compositional-rest.obo:
 
 MONTS =  envo po pato exo
 IMONTS=  $(patsubst %, -r %,$(MONTS))
+
+## concept_enriched(?Class,?TokenClass,?Score,?Precision,?Recall,?CCount,?Rel)
 omine.tsv:
 	blip-findall -debug index -debug ominfo -goal init_ontominer  -u ontominer -i gemet-full.obo $(IMONTS) concept_enriched/7 -label -no_pred > $@.tmp && mysort -k 3 -n -r $@.tmp > $@
 
