updated employment and tourism related classes following COP input, imported curation status tags, definition refinement

--- a/src/Makefile
+++ b/src/Makefile
@@ -69,8 +69,8 @@ SDG_IMPORTS_BASE_URI = $(SDG)
 all_imports: $(IMPORTS_OWL)
 
 # We will edit this as the SDGIO needs become apparent...
-KEEPRELS = BFO:0000050 BFO:0000051 RO:0002202 immediate_transformation_of RO:0002176 RO:0000057 BFO:0000055 RO:0002473 RO:0002351 RO:0002131
-# 'part of' 'has part' 'develops from' 'immediate_transformation_of' 'connects' 'has participant'  'realizes' 'composed primarily of' 'has member' 'overlaps'
+KEEPRELS = BFO:0000050 BFO:0000051 RO:0002202 immediate_transformation_of RO:0002176 RO:0000057 BFO:0000055 RO:0002473 RO:0002351 RO:0002131 IAO:0000114
+# 'part of' 'has part' 'develops from' 'immediate_transformation_of' 'connects' 'has participant'  'realizes' 'composed primarily of' 'has member' 'overlaps' 'has curation status'
 
 # Use ROBOT, driven entirely by terms lists NOT from source ontology
 imports/%_import.owl: mirror/%.owl imports/%_terms.txt $(ROBOT)
