responding to revision requests on #131

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
-mirror/*
-
-catalog-v001.xml
+.DS_Store
+*.tmp
+src/mirror
+src/mirror/*
+src/sdgio.owl
+src/sdgio.obo
+src/sdgio.json
+src/sdgio-base.*
+src/sdgio-basic.*
+src/sdgio-full.*
+src/sdgio-simple.*
+src/sdgio-simple-non-classified.*
+semantic.cache
+bin/
+src/seed.txt
+src/target/
+src/dosdp-tools.log
+src/patterns/imports/seed_sorted.txt
+src/ed_definitions_merged.owl
+src/patterns 
+*.tmp.obo
+*.tmp.owl
